--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Comparación de Seguros de Auto</h1>
+            <h1>Strategos Diseño Patrimonial</h1>
             {% if is_export %}
                 <div class="meta">
                     <div>
@@ -103,7 +103,7 @@
         </main>
         
         <footer>
-            <p>&copy; 2025 Comparador de Seguros de Auto</p>
+            <p>&copy; 2025 Strategos Diseño Patrimonial</p>
         </footer>
     </div>
     
