--- a/templates/results.html
+++ b/templates/results.html
@@ -56,13 +56,15 @@
                                 <tr>
                                     <th class="coverage-header" style="width:22%">Coberturas</th>
                                     {% for item in data %}
-                                        <th class="company-header" style="background: {% if is_export and header_colors %}{{ header_colors[loop.index0] }}{% else %}#0b4a6a{% endif %}; text-align:center;">
+                                        <th class="company-header-cell" style="background: {% if is_export and header_colors %}{{ header_colors[loop.index0] }}{% else %}#0b4a6a{% endif %}; text-align:center;">
                                             {% if is_export %}
-                                                {% if company_logos and company_logos[loop.index0] %}
-                                                    <img src="{{ company_logos[loop.index0] }}" alt="logo" style="height:18px; object-fit:contain; margin: 4px 0;"/>
-                                                {% endif %}
+                                                <div class="company-header-inner">
+                                                    {% if company_logos and company_logos[loop.index0] %}
+                                                        <img src="{{ company_logos[loop.index0] }}" alt="logo" />
+                                                    {% endif %}
+                                                </div>
                                             {% else %}
-                                                <span>{{ item.company }}</span>
+                                                <div class="company-header-inner"><span>{{ item.company }}</span></div>
                                             {% endif %}
                                         </th>
                                     {% endfor %}
