--- a/templates/results.html
+++ b/templates/results.html
@@ -59,7 +59,7 @@
                                 <tr>
                                     <th class="coverage-header" style="width:22%">Coberturas</th>
                                     {% for item in data %}
-                                        <th class="company-header-cell" style="background: {% if is_export and header_colors %}{{ header_colors[loop.index0] }}{% else %}#0b4a6a{% endif %}; text-align:center;">
+                                        <th class="company-header-cell" style="background:#f5f7fa; color:#1f2c36; text-align:center;">
                                             {% if is_export %}
                                                 <div class="company-header-inner">
                                                     {% if company_logos and company_logos[loop.index0] %}
