--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             </div>
         </main>
         
-        <footer>
+        <footer style="text-align: center;">
             <p>&copy; 2025 Strategos Diseño Patrimonial</p>
         </footer>
     </div>
