--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,10 @@
 <body>
     <div class="container">
         <header>
-            <div class="meta" style="margin-bottom: 10px;">
-                <div>
-                    <img src="{{ url_for('static', filename='strategos_footer.png') }}" alt="Logo" class="logo">
-                </div>
+            <div style="text-align: center;">
+                <img src="{{ url_for('static', filename='strategos_footer.png') }}" alt="Strategos Logo" class="logo-landing">
             </div>
-            <p>Sube las cotizaciones PDF de las aseguradoras para comparar coberturas</p>
+            <p style="text-align: center; margin-top: 10px;">Sube las cotizaciones PDF de las aseguradoras para comparar coberturas</p>
         </header>
         
         <main>
